# sgem

./: .env.example  .gitignore  deploy.sh  main.py  manage.py  pyproject.toml  requirements.txt
core/: admin.py  filters.py  forms.py  forms_usuarios.py  models.py  urls.py  views.py
core/management/commands/: gerar_slots.py  importar_sao_joao.py
core/migrations/: 0001_initial.py  0002_add_ativo_evento.py  0003_horario_inicio_fim.py  0004_slot_programacao.py
sgem/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: custom.css
templates/: base.html
templates/core/: _form_base.html  calendario.html  dashboard.html  grade.html  programacao.html  programacao_publica.html  slot_lote.html  slot_preencher.html
templates/core/atracao/: detail.html  list.html
templates/core/contrato/: detail.html  form.html  list.html
templates/core/evento/: detail.html  list.html
templates/core/pdf/: cronograma.html
templates/core/pessoa/: detail.html  form.html  list.html
templates/core/polo/: detail.html  list.html
templates/core/usuarios/: form.html  list.html  senha.html
templates/partials/: _card_kpi.html  _filter_panel.html  _modal_delete.html
templates/registration/: login.html
